AMMScriptParser.py
# Generated from AMMScriptParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AMMScriptParser ( Parser ):

    grammarFileName = "AMMScriptParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'set'", "'print'", "'if'", 
                     "'else'", "'for'", "'while'", "'func'", "'return'", 
                     "'break'", "'continue'", "'switch'", "'case'", "'default'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'='", 
                     "'+='", "'-='", "'*='", "'/='", "'+'", "'-'", "'*'", 
                     "'/'", "'^'", "'%'", "'--'", "'++'", "'('", "')'", 
                     "'{'", "'}'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'true'", "'false'", "'&&'", "'||'", "'!'", "<INVALID>", 
                     "','", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "WHITESPACE", "SET", "PRINT", "IF", "ELSE", 
                      "FOR", "WHILE", "FUNCTION", "RETURN", "BREAK", "CONTINUE", 
                      "SWITCH", "CASE", "DEFAULT", "EQUAL_EQUAL", "NOT_EQUAL", 
                      "LESS", "GREATER", "LESS_EQUAL", "GREATER_EQUAL", 
                      "EQUAL", "PLUS_EQUAL", "MINUS_EQUAL", "MULTIPLY_EQUAL", 
                      "DIVIDE_EQUAL", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", 
                      "POWER", "MODULO", "MINUS_MINUS", "PLUS_PLUS", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "ID", "NUMBER", "STRING", 
                      "TRUE", "FALSE", "AND", "OR", "NOT", "COMMENT", "COMMA", 
                      "SEMICOLON", "COLON" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_statementInLoop = 2
    RULE_statementInFunction = 3
    RULE_statementInFunctionAndLoop = 4
    RULE_variableDeclaration = 5
    RULE_variableAsignment = 6
    RULE_print = 7
    RULE_if = 8
    RULE_ifInLoop = 9
    RULE_ifInFunction = 10
    RULE_ifInFunctionAndLoop = 11
    RULE_loop = 12
    RULE_loopInFunction = 13
    RULE_forLoop = 14
    RULE_forLoopInFunction = 15
    RULE_whileLoop = 16
    RULE_whileLoopInFunction = 17
    RULE_switch = 18
    RULE_switchInFunction = 19
    RULE_functionDeclaration = 20
    RULE_functionCall = 21
    RULE_expr = 22
    RULE_unaryExpr = 23

    ruleNames =  [ "program", "statement", "statementInLoop", "statementInFunction", 
                   "statementInFunctionAndLoop", "variableDeclaration", 
                   "variableAsignment", "print", "if", "ifInLoop", "ifInFunction", 
                   "ifInFunctionAndLoop", "loop", "loopInFunction", "forLoop", 
                   "forLoopInFunction", "whileLoop", "whileLoopInFunction", 
                   "switch", "switchInFunction", "functionDeclaration", 
                   "functionCall", "expr", "unaryExpr" ]

    EOF = Token.EOF
    WHITESPACE=1
    SET=2
    PRINT=3
    IF=4
    ELSE=5
    FOR=6
    WHILE=7
    FUNCTION=8
    RETURN=9
    BREAK=10
    CONTINUE=11
    SWITCH=12
    CASE=13
    DEFAULT=14
    EQUAL_EQUAL=15
    NOT_EQUAL=16
    LESS=17
    GREATER=18
    LESS_EQUAL=19
    GREATER_EQUAL=20
    EQUAL=21
    PLUS_EQUAL=22
    MINUS_EQUAL=23
    MULTIPLY_EQUAL=24
    DIVIDE_EQUAL=25
    PLUS=26
    MINUS=27
    MULTIPLY=28
    DIVIDE=29
    POWER=30
    MODULO=31
    MINUS_MINUS=32
    PLUS_PLUS=33
    LPAREN=34
    RPAREN=35
    LBRACE=36
    RBRACE=37
    ID=38
    NUMBER=39
    STRING=40
    TRUE=41
    FALSE=42
    AND=43
    OR=44
    NOT=45
    COMMENT=46
    COMMA=47
    SEMICOLON=48
    COLON=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AMMScriptParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AMMScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(AMMScriptParser.StatementContext,i)


        def getRuleIndex(self):
            return AMMScriptParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = AMMScriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8551279890908) != 0):
                self.state = 48
                self.statement()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(AMMScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(AMMScriptParser.VariableDeclarationContext,0)


        def SEMICOLON(self):
            return self.getToken(AMMScriptParser.SEMICOLON, 0)

        def variableAsignment(self):
            return self.getTypedRuleContext(AMMScriptParser.VariableAsignmentContext,0)


        def print_(self):
            return self.getTypedRuleContext(AMMScriptParser.PrintContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(AMMScriptParser.FunctionCallContext,0)


        def expr(self):
            return self.getTypedRuleContext(AMMScriptParser.ExprContext,0)


        def if_(self):
            return self.getTypedRuleContext(AMMScriptParser.IfContext,0)


        def loop(self):
            return self.getTypedRuleContext(AMMScriptParser.LoopContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(AMMScriptParser.FunctionDeclarationContext,0)


        def switch(self):
            return self.getTypedRuleContext(AMMScriptParser.SwitchContext,0)


        def getRuleIndex(self):
            return AMMScriptParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = AMMScriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.variableDeclaration()
                self.state = 57
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.variableAsignment()
                self.state = 60
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.print_()
                self.state = 63
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.functionCall()
                self.state = 66
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 68
                self.expr(0)
                self.state = 69
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 71
                self.if_()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 72
                self.loop()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 73
                self.functionDeclaration()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 74
                self.switch()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementInLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(AMMScriptParser.VariableDeclarationContext,0)


        def SEMICOLON(self):
            return self.getToken(AMMScriptParser.SEMICOLON, 0)

        def variableAsignment(self):
            return self.getTypedRuleContext(AMMScriptParser.VariableAsignmentContext,0)


        def print_(self):
            return self.getTypedRuleContext(AMMScriptParser.PrintContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(AMMScriptParser.FunctionCallContext,0)


        def expr(self):
            return self.getTypedRuleContext(AMMScriptParser.ExprContext,0)


        def ifInLoop(self):
            return self.getTypedRuleContext(AMMScriptParser.IfInLoopContext,0)


        def loop(self):
            return self.getTypedRuleContext(AMMScriptParser.LoopContext,0)


        def BREAK(self):
            return self.getToken(AMMScriptParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(AMMScriptParser.CONTINUE, 0)

        def switch(self):
            return self.getTypedRuleContext(AMMScriptParser.SwitchContext,0)


        def getRuleIndex(self):
            return AMMScriptParser.RULE_statementInLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementInLoop" ):
                listener.enterStatementInLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementInLoop" ):
                listener.exitStatementInLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementInLoop" ):
                return visitor.visitStatementInLoop(self)
            else:
                return visitor.visitChildren(self)




    def statementInLoop(self):

        localctx = AMMScriptParser.StatementInLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statementInLoop)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.variableDeclaration()
                self.state = 78
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.variableAsignment()
                self.state = 81
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.print_()
                self.state = 84
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.functionCall()
                self.state = 87
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self.expr(0)
                self.state = 90
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 92
                self.ifInLoop()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 93
                self.loop()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 94
                self.match(AMMScriptParser.BREAK)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 95
                self.match(AMMScriptParser.CONTINUE)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 96
                self.switch()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementInFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(AMMScriptParser.VariableDeclarationContext,0)


        def SEMICOLON(self):
            return self.getToken(AMMScriptParser.SEMICOLON, 0)

        def variableAsignment(self):
            return self.getTypedRuleContext(AMMScriptParser.VariableAsignmentContext,0)


        def print_(self):
            return self.getTypedRuleContext(AMMScriptParser.PrintContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(AMMScriptParser.FunctionCallContext,0)


        def expr(self):
            return self.getTypedRuleContext(AMMScriptParser.ExprContext,0)


        def ifInFunction(self):
            return self.getTypedRuleContext(AMMScriptParser.IfInFunctionContext,0)


        def loopInFunction(self):
            return self.getTypedRuleContext(AMMScriptParser.LoopInFunctionContext,0)


        def RETURN(self):
            return self.getToken(AMMScriptParser.RETURN, 0)

        def switchInFunction(self):
            return self.getTypedRuleContext(AMMScriptParser.SwitchInFunctionContext,0)


        def getRuleIndex(self):
            return AMMScriptParser.RULE_statementInFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementInFunction" ):
                listener.enterStatementInFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementInFunction" ):
                listener.exitStatementInFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementInFunction" ):
                return visitor.visitStatementInFunction(self)
            else:
                return visitor.visitChildren(self)




    def statementInFunction(self):

        localctx = AMMScriptParser.StatementInFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statementInFunction)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.variableDeclaration()
                self.state = 100
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.variableAsignment()
                self.state = 103
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.print_()
                self.state = 106
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.functionCall()
                self.state = 109
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 111
                self.expr(0)
                self.state = 112
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 114
                self.ifInFunction()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 115
                self.loopInFunction()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 116
                self.match(AMMScriptParser.RETURN)
                self.state = 117
                self.expr(0)
                self.state = 118
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 120
                self.match(AMMScriptParser.RETURN)
                self.state = 121
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 122
                self.switchInFunction()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementInFunctionAndLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(AMMScriptParser.VariableDeclarationContext,0)


        def SEMICOLON(self):
            return self.getToken(AMMScriptParser.SEMICOLON, 0)

        def variableAsignment(self):
            return self.getTypedRuleContext(AMMScriptParser.VariableAsignmentContext,0)


        def print_(self):
            return self.getTypedRuleContext(AMMScriptParser.PrintContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(AMMScriptParser.FunctionCallContext,0)


        def expr(self):
            return self.getTypedRuleContext(AMMScriptParser.ExprContext,0)


        def ifInFunctionAndLoop(self):
            return self.getTypedRuleContext(AMMScriptParser.IfInFunctionAndLoopContext,0)


        def loopInFunction(self):
            return self.getTypedRuleContext(AMMScriptParser.LoopInFunctionContext,0)


        def BREAK(self):
            return self.getToken(AMMScriptParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(AMMScriptParser.CONTINUE, 0)

        def RETURN(self):
            return self.getToken(AMMScriptParser.RETURN, 0)

        def getRuleIndex(self):
            return AMMScriptParser.RULE_statementInFunctionAndLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementInFunctionAndLoop" ):
                listener.enterStatementInFunctionAndLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementInFunctionAndLoop" ):
                listener.exitStatementInFunctionAndLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementInFunctionAndLoop" ):
                return visitor.visitStatementInFunctionAndLoop(self)
            else:
                return visitor.visitChildren(self)




    def statementInFunctionAndLoop(self):

        localctx = AMMScriptParser.StatementInFunctionAndLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statementInFunctionAndLoop)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.variableDeclaration()
                self.state = 126
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.variableAsignment()
                self.state = 129
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 131
                self.print_()
                self.state = 132
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 134
                self.functionCall()
                self.state = 135
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 137
                self.expr(0)
                self.state = 138
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 140
                self.ifInFunctionAndLoop()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 141
                self.loopInFunction()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 142
                self.match(AMMScriptParser.BREAK)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 143
                self.match(AMMScriptParser.CONTINUE)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 144
                self.match(AMMScriptParser.RETURN)
                self.state = 145
                self.expr(0)
                self.state = 146
                self.match(AMMScriptParser.SEMICOLON)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 148
                self.match(AMMScriptParser.RETURN)
                self.state = 149
                self.match(AMMScriptParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SET(self):
            return self.getToken(AMMScriptParser.SET, 0)

        def ID(self):
            return self.getToken(AMMScriptParser.ID, 0)

        def EQUAL(self):
            return self.getToken(AMMScriptParser.EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(AMMScriptParser.ExprContext,0)


        def getRuleIndex(self):
            return AMMScriptParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = AMMScriptParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(AMMScriptParser.SET)
            self.state = 153
            self.match(AMMScriptParser.ID)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 154
                self.match(AMMScriptParser.EQUAL)
                self.state = 155
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableAsignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AMMScriptParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(AMMScriptParser.ExprContext,0)


        def EQUAL(self):
            return self.getToken(AMMScriptParser.EQUAL, 0)

        def PLUS_EQUAL(self):
            return self.getToken(AMMScriptParser.PLUS_EQUAL, 0)

        def MINUS_EQUAL(self):
            return self.getToken(AMMScriptParser.MINUS_EQUAL, 0)

        def MULTIPLY_EQUAL(self):
            return self.getToken(AMMScriptParser.MULTIPLY_EQUAL, 0)

        def DIVIDE_EQUAL(self):
            return self.getToken(AMMScriptParser.DIVIDE_EQUAL, 0)

        def getRuleIndex(self):
            return AMMScriptParser.RULE_variableAsignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableAsignment" ):
                listener.enterVariableAsignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableAsignment" ):
                listener.exitVariableAsignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableAsignment" ):
                return visitor.visitVariableAsignment(self)
            else:
                return visitor.visitChildren(self)




    def variableAsignment(self):

        localctx = AMMScriptParser.VariableAsignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variableAsignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(AMMScriptParser.ID)
            self.state = 159
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 65011712) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 160
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(AMMScriptParser.PRINT, 0)

        def expr(self):
            return self.getTypedRuleContext(AMMScriptParser.ExprContext,0)


        def getRuleIndex(self):
            return AMMScriptParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)




    def print_(self):

        localctx = AMMScriptParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(AMMScriptParser.PRINT)
            self.state = 163
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self, i:int=None):
            if i is None:
                return self.getTokens(AMMScriptParser.IF)
            else:
                return self.getToken(AMMScriptParser.IF, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AMMScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(AMMScriptParser.ExprContext,i)


        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(AMMScriptParser.LBRACE)
            else:
                return self.getToken(AMMScriptParser.LBRACE, i)

        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(AMMScriptParser.RBRACE)
            else:
                return self.getToken(AMMScriptParser.RBRACE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AMMScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(AMMScriptParser.StatementContext,i)


        def ELSE(self, i:int=None):
            if i is None:
                return self.getTokens(AMMScriptParser.ELSE)
            else:
                return self.getToken(AMMScriptParser.ELSE, i)

        def getRuleIndex(self):
            return AMMScriptParser.RULE_if
